--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
 NODE_ENV = "development"
 
-VUE_APP_BASE_API = "http://localhost:8888"
+VUE_APP_BASE_API = "http://localhost:8888/"
 VUE_APP_BASE_URL = "/admin/"
