--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "svg-sprite-loader": "^6.0.11",
     "url-loader": "^4.1.1",
     "vue": "^3.2.37",
+    "vue-eslint-parser": "^9.0.2",
     "vue-router": "^4.0.15",
     "vuex": "^4.0.2"
   },
@@ -27,7 +28,7 @@
     "babel-plugin-component": "^1.1.1",
     "eslint": "^8.17.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-vue": "^9.1.0",
+    "eslint-plugin-vue": "^9.1.1",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "vue-cli-plugin-element": "^1.0.1",
