--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
     "default-passive-events": "^2.0.0",
+    "echarts": "^5.3.3",
     "element-plus": "^2.2.5",
     "js-cookie": "^3.0.1",
     "nprogress": "^0.2.0",
