fix(.env.production): 修复构建时未使用生产环境的问题

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-NODE_ENV = "development"
+NODE_ENV = "production"
 
-VUE_APP_BASE_API = "http://admin:8888/"
+VUE_APP_BASE_API = "http://8.130.27.177:8888/"
 VUE_APP_BASE_URL = "/admin/"
