feat(file): 修复后台新版重做之后出现的问题，添加文件管理功能

--- a/default.conf
+++ b/default.conf
@@ -13,6 +13,11 @@ server {
     proxy_temp_file_write_size  64k;
     auth_basic "status";
 
+
+    location ~ \/uploads\/.*\.(gif|jpg|png|bmp|pdf)$ {
+        root /data;
+    }
+
     location / {
         root   /usr/share/nginx/html/release;
         index  index.html index.htm;
@@ -25,11 +30,6 @@ server {
         index  index.html index.html;
     }
 
-#    location /inflow {
-#        try_files $uri $uri/ /inflow/index.html;
-#        root /usr/share/nginx/html/inflow/;
-#        index index.html;
-#    }
 
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
