fix(administrator): 完善adminstrator模块

--- a/default.conf
+++ b/default.conf
@@ -18,7 +18,7 @@ server {
         root /data;
     }
 
-    location /admin {
+    location / {
         root   /usr/share/nginx/html/release;
         index  index.html index.htm;
         try_files $uri $uri/ /index.html;  #VUE项目，配置路由（必须）
