--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,7 @@ jobs:
       - run: docker build -t hhoao/ret-web-admin-setup .
       - run: docker push hhoao/ret-web-admin-setup
 workflows:
+  version: 2
   build-and-deploy:
     jobs:
       - build
