--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,12 +21,22 @@ jobs:
             - dist
   deploy:
     docker:
-      - image: cimg/node:18.4.0
+      - image: cimg/node:16.15.1
     steps:
       - checkout
       - attach_workspace:
           at: .
       - run: docker build -t hhoao/ret-web-admin-setup .
+      - run:
+          command: |
+            cat > ~/.docker/config.json \<< EOF
+            {
+              'auths': {
+                  'https://index.docker.io/v1/': {
+                  'auth':'$DOCKER_AUTH',
+                }
+              }
+            }
       - run: docker push hhoao/ret-web-admin-setup
 workflows:
   version: 2
