--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,9 +35,9 @@ jobs:
             if
             cat > ~/.docker/config.json \<< EOF
             {
-              'auths': {
-                  'https://index.docker.io/v1/': {
-                  'auth':'$DOCKER_AUTH',
+              "auths": {
+                  "https://index.docker.io/v1/": {
+                  "auth":"$DOCKER_AUTH"
                 }
               }
             }
