--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,11 +36,12 @@ jobs:
             cat > ~/.docker/config.json \<< EOF
             {
               "auths": {
-                  "https://index.docker.io/v1/": {
+                "https://index.docker.io/v1/": {
                   "auth":"$DOCKER_AUTH"
                 }
               }
             }
+            EOF
       - run: docker push hhoao/ret-web-admin-setup
 workflows:
   version: 2
