--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,7 @@ jobs:
             if [ ! -d ~/.docker ];
             then
               mkdir ~/.docker
+              touch ~/.docker/config.json 
             fi
             cat > ~/.docker/config.json \<< EOF
             {
