--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,7 @@ jobs:
               }
             }
             EOF
+      - run: ~/.docker/config.json
       - run: docker push hhoao/ret-web-admin-setup
 workflows:
   version: 2
